[package]
name = "mosaic-core"
version = "0.1.0"
description = "Mosaic protocol core library"
authors = [ "Steve Farroll <stevefarroll@proton.me>" ]
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = [ "rand_core" ] }
http = "1.1"
rand = "0.8"
rand_core = "0.6"
