[package]
name = "mosaic-core"
version = "0.1.0"
description = "Mosaic protocol core library"
authors = [ "Steve Farroll <stevefarroll@proton.me>" ]
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.22"
bitflags = "2.6"
ed25519-dalek = { version = "2.1", features = [ "rand_core" ] }
futures = "0.3"
http = "1.1"
mainline = { version = "4.1", features = [ "async" ] }
rand = "0.8"
rand_core = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }
getrandom = { version = "0.2", features = [ "js" ] }

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }